--- a/index.html
+++ b/index.html
@@ -378,9 +378,71 @@
                 height: 300px;
             }
         }
+
+        /* Dropdown Styling */
+.dropdown-menu {
+    background: var(--dark);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.dropdown-item {
+    color: white !important;
+    padding: 10px 20px;
+    transition: all 0.3s;
+}
+
+.dropdown-item:hover {
+    background: var(--primary-color);
+    color: white !important;
+}
+
+.dropdown-toggle::after {
+    margin-left: 5px;
+}
     </style>
 </head>
 <body>
+
+    <!-- Navigation with Dropdown -->
+<nav class="navbar navbar-expand-lg navbar-light">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">Stripper Palooza</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                
+                <!-- Male Stripper Dropdown -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="maleStripperDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Male Stripper
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="maleStripperDropdown">
+                        <li><a class="dropdown-item" href="male-stripper/hire-male-stripper.html">Hire Male Stripper</a></li>
+                        <li><a class="dropdown-item" href="male-stripper/male-stripper-for-hire.html">Male Stripper for Hire</a></li>
+                        <li><a class="dropdown-item" href="male-stripper/female-stripper.html">Female Stripper</a></li>
+                        <li><a class="dropdown-item" href="male-stripper/near-me.html">Near Me</a></li>
+                    </ul>
+                </li>
+                
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link" href="bachelor.html">Bachelor</a>
+                    <a class="nav-link" href="bachelorette.html">Bachelorette</a>
+                    <a class="nav-link" href="strippers.html">Strippers</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="tel:+18437021784">Call Now</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
 
     <!-- Hero Section -->
     <section class="hero-section">
@@ -413,9 +475,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <div class="image-placeholder">
-                        Your Image Here
+                    <div class="row justify-content-center">
+                    <div class="col-lg-8 mx-auto">
+                        <img src="gen3.jpg" alt="Professional Strippers Charleston SC" class="img-fluid rounded">
                     </div>
+                </div>
                 </div>
             </div>
         </div>
