--- a/male-stripper/female-stripper.html
+++ b/male-stripper/female-stripper.html
@@ -358,7 +358,7 @@
 
                     <h3>Charleston Areas We Serve for Female Stripper Bookings</h3>
                     
-                    <p>We provide female strippers for hire throughout the Charleston region including:</p>
+                    <p>We provide female <a href="index.html">strippers</a> for hire throughout the Charleston region including:</p>
 
                     <ul>
                         <li>Charleston (downtown, peninsula, and all neighborhoods)</li>
