--- a/male-stripper/hire-male-stripper.html
+++ b/male-stripper/hire-male-stripper.html
@@ -283,7 +283,7 @@
 
                     <h3>The History and Evolution of Male Strippers</h3>
                     
-                    <p>The history of male strippers as professional entertainers evolved significantly throughout the late 20th century. <a href="https://en.wikipedia.org/wiki/Stripper" class="external-link" target="_blank" rel="noopener">Historical documentation on male exotic dancers</a> reveals that male stripping emerged as a recognized entertainment profession during the 1970s and 1980s, initially through male strip clubs and revue shows before expanding into private party entertainment services.</p>
+                    <p>The history of male <a href="index.html">strippers</a> as professional entertainers evolved significantly throughout the late 20th century. <a href="https://en.wikipedia.org/wiki/Stripper" class="external-link" target="_blank" rel="noopener">Historical documentation on male exotic dancers</a> reveals that male stripping emerged as a recognized entertainment profession during the 1970s and 1980s, initially through male strip clubs and revue shows before expanding into private party entertainment services.</p>
 
                     <p>Male strippers gained mainstream cultural recognition through venues like Chippendales and Thunder From Down Under, which established male exotic dance as legitimate entertainment for female audiences. As bachelorette parties became increasingly popular cultural celebrations, the demand to hire male stripper performers for private parties grew substantially, creating an industry of traveling male entertainers who specialize in bachelorette and birthday party celebrations.</p>
 
