--- a/male-stripper/index.html
+++ b/male-stripper/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Male Stripper Bachelorette Party Charleston SC - Professional Entertainment | Stripper Palooza</title>
+    <title>Male Stripper Bachelorette Party Mount Pleasant - Professional Entertainment | Stripper Palooza</title>
     <meta name="description" content="Male stripper bachelorette party entertainment in Charleston, SC. Professional male strippers for bachelorette parties in Mount Pleasant, Isle of Palms, Folly Beach, Summerville, and North Charleston.">
     
     <!-- Bootstrap CSS -->
