--- a/index.html
+++ b/index.html
@@ -439,7 +439,10 @@
 
                     <p>Located in the heart of town, Stripper Palooza serves the entire Lowcountry metropolitan area and surrounding Lowcountry communities. Our performers bring Vegas-caliber shows directly to your venue, creating memories that last long after the celebration ends.</p>
 
-                    <p>What sets Stripper Palooza apart is our commitment to professionalism, reliability, and exceptional entertainment value. Our <a href="https://charlestonstrippers101.com">male strippers Charleston</a> hunks and sexy females are one of a kind. Every performer in our roster is carefully selected for their talent, charisma, and ability to create an electrifying atmosphere. We understand that your celebration deserves nothing less than spectacular, which is why we maintain the highest standards in the industry.</p>
+                    <p>What sets Stripper Palooza apart is our commitment to professionalism, reliability, and exceptional entertainment value. Every performer in our roster is carefully selected for their talent, charisma, and ability to create an electrifying atmosphere. We understand that your celebration deserves nothing less than spectacular, which is why we maintain the highest standards in the industry.</p>
+
+                    <p>We understand the <a href="https://charlestonstrippers101.com/">Charleston Strippers 101</a> area intimately—from the historic charm of downtown to the beach vibes of Folly and IOP, from the family-friendly neighborhoods of Lowcountry to the waterfront communities of Daniel Island. No matter where your event takes place, we bring professional entertainment directly to your door.</p>
+
                 </div>
             </div>
         </div>
@@ -504,7 +507,8 @@
                     
                     <p>Conveniently located, Stripper Palooza proudly serves the entire metropolitan area. Whether your celebration is in a vacation rental, a downtown hotel, a beach property, or anywhere throughout the Lowcountry, our performers deliver the same exceptional service and unforgettable entertainment Some of the best you ever seen..</p>
 
-                    <p>We understand the <a href="https://charlestonstrippers101.com/">Charleston Strippers 101</a> area intimately—from the historic charm of downtown to the beach vibes of Folly and IOP, from the family-friendly neighborhoods of Lowcountry to the waterfront communities of Daniel Island. No matter where your event takes place, we bring professional entertainment directly to your door.</p>
+                    <p>Our <a href="https://charlestonstrippers101.com">male strippers Charleston</a> hunks and sexy females are one of a kind. </p>
+
                 </div>
             </div>
         </div>
