--- a/male-stripper/male-stripper-for-hire.html
+++ b/male-stripper/male-stripper-for-hire.html
@@ -397,7 +397,7 @@
 
                     <h3>Events Perfect for Male Strippers for Hire</h3>
                     
-                    <p>Stripper Palooza helps clients find male strippers for hire for various Charleston celebrations:</p>
+                    <p>Stripper Palooza helps clients find male strippers for hire for various celebrations:</p>
 
                     <ul>
                         <li><strong>Bachelorette Parties:</strong> Most popular reason to get a male stripper for hire, creating memorable bride-to-be celebrations</li>
