--- a/bachelorette.html
+++ b/bachelorette.html
@@ -222,8 +222,6 @@
                     <ul class="dropdown-menu" aria-labelledby="maleStripperDropdown">
                         <li><a class="dropdown-item" href="male-stripper/hire-male-stripper.html">Hire Male Stripper</a></li>
                         <li><a class="dropdown-item" href="male-stripper/male-stripper-for-hire.html">Male Stripper for Hire</a></li>
-                        <li><a class="dropdown-item" href="male-stripper/female-stripper.html">Female Stripper</a></li>
-                        <li><a class="dropdown-item" href="male-stripper/near-me.html">Near Me</a></li>
                     </ul>
                 </li>
                 
@@ -234,7 +232,7 @@
                     <a class="nav-link" href="strippers.html">Strippers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="tel:+18437021784">Call Now</a>
+                    <a class="nav-link" href="">Call Now</a>
                 </li>
             </ul>
         </div>
@@ -244,8 +242,7 @@
     <!-- Hero Section -->
     <section class="hero-section">
         <div class="container">
-            <h1>Bachelorette Parties & Male Strippers</h1>
-            <p class="lead">Understanding Why Bachelorette Parties Book Male Strippers</p>
+            <h1>Bachelorette Parties Male Stripper</h1>
         </div>
     </section>
 
@@ -254,9 +251,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 mx-auto">
-                    <h3>Why Downtown is a Top private party Destination</h3>
+                    <h3>Top private party Destination</h3>
                     
-                    <p>Lowcountry, South Carolina has emerged as one of the most popular bachelorette party destinations in the United States. The Holy City's unique combination of Southern charm, beautiful beaches, vibrant nightlife, historic attractions, and world-class dining creates the perfect backdrop for bachelorette celebrations. Thousands of bachelorette parties travel to Charleston each year, making it a premier destination for bride-to-be celebrations alongside cities like Nashville, Miami, and Las Vegas.</p>
+                    <p>Lowcountry, South Carolina has emerged as one of the most popular bachelorette party destinations in the United States. The Holy City's unique combination of Southern charm, beautiful beaches, vibrant nightlife, historic attractions, and world-class dining creates the perfect backdrop for bachelorette celebrations. Thousands of bachelorette parties travel to Charleston each year, making it a premier destination for bride-to-be celebrations alongside cities like Nashville, Miami, and Las Vegas. The perfect hire is a <a href="https://charlestonstrippers101.com">bachelorette party male stripper</a></p>
 
                     <p>The Lowcountry area, including Mount Pleasant, Folly Beach, and Isle of Palms, offers bachelorette groups everything they need for an unforgettable weekend: luxurious vacation rentals, beachfront properties, rooftop bars, sophisticated restaurants, historic tours, beach activities, and proximity to multiple entertainment options. Most bachelorette parties visiting Charleston are travelers—groups flying in from across the country or driving from nearby states to experience the Lowcountry's hospitality and celebration atmosphere.</p>
 
@@ -457,7 +454,6 @@
             <p class="mb-2">
                 <a href="index.html">Home</a> | 
                 <a href="about.html">About</a> | 
-                <a href="tel:+18437021784">Call Us</a>
             </p>
             <p class="mt-4 mb-0" style="font-size: 0.9rem;">&copy; 2025 Stripper Palooza. All Rights Reserved. | Must be 18+ to book services.</p>
         </div>
