--- a/strippers.html
+++ b/strippers.html
@@ -225,8 +225,7 @@
                     <ul class="dropdown-menu" aria-labelledby="maleStripperDropdown">
                         <li><a class="dropdown-item" href="male-stripper/hire-male-stripper.html">Hire Male Stripper</a></li>
                         <li><a class="dropdown-item" href="male-stripper/male-stripper-for-hire.html">Male Stripper for Hire</a></li>
-                        <li><a class="dropdown-item" href="male-stripper/-stripper.html"> Stripper</a></li>
-                        <li><a class="dropdown-item" href="male-stripper/near-me.html">Near Me</a></li>
+                        <li><a class="dropdown-item" href="male-stripper/stripper.html"> Stripper</a></li>
                     </ul>
                 </li>
                 
@@ -248,8 +247,8 @@
     <!-- Hero Section -->
     <section class="hero-section">
         <div class="container">
-            <h1>Professional Strippers</h1>
-            <p class="lead">Understanding Exotic Dancers & Entertainment Services</p>
+            <h1>Professional Male Strippers</h1>
+            <p class="lead">Exotic Dancers & Entertainment Services</p>
         </div>
     </section>
 
@@ -266,7 +265,7 @@
 
                     <h3>Male Strippers in Lowcountry</h3>
                     
-                    <p>Male strippers are professional male exotic dancers who perform for predominantly  audiences at bachelorette parties, birthday celebrations, girls' nights out, and private events. <a href="https://charlestonstrippers101.com">Male stripper Lowcountry</a> performances typically feature highly choreographed dance routines, impressive physical displays, audience interaction, and theatrical entertainment elements designed to create fun, exciting experiences for celebratory occasions.</p>
+                    <p>Male strippers are professional male exotic dancers who perform for predominantly  audiences at bachelorette parties, birthday celebrations, girls' nights out, and private events. <a href="https://charlestonstrippers101.com">Male strippers in Charleston</a> performances typically feature highly choreographed dance routines, impressive physical displays, audience interaction, and theatrical entertainment elements designed to create fun, exciting experiences for celebratory occasions.</p>
 
                     <p>At Stripper Palooza, our male strippers are experienced professional entertainers who specialize in bachelorette party entertainment throughout Lowcountry and Mount Pleasant. Each male stripper brings unique performance styles, impressive physiques, dance training, and the charisma necessary to engage audiences and create unforgettable memories. Our male strippers serve the entire Lowcountry area including Mount Pleasant, Folly Beach, Isle of Palms, Sullivan's Island, and surrounding communities.</p>
 
@@ -441,12 +440,6 @@
             <p class="mb-3"><strong>Stripper Palooza</strong></p>
             <p class="mb-3">Professional Male &  Strippers | Lowcountry & Mount Pleasant, SC</p>
             <p class="mb-3">Mount Pleasant, SC 29464</p>
-            <p class="mb-3">Phone: <a href="tel:+18437021784">(843) 702-1784</a></p>
-            <p class="mb-2">
-                <a href="index.html">Home</a> | 
-                <a href="about.html">About</a> | 
-                <a href="tel:+18437021784">Call Us</a>
-            </p>
             <p class="mt-4 mb-0" style="font-size: 0.9rem;">&copy; 2025 Stripper Palooza. All Rights Reserved. | Must be 18+ to book services.</p>
         </div>
     </footer>
