--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                     
                     <p>Conveniently located, Stripper Palooza proudly serves the entire metropolitan area. Whether your celebration is in a vacation rental, a downtown hotel, a beach property, or anywhere throughout the Lowcountry, our performers deliver the same exceptional service and unforgettable entertainment Some of the best you ever seen..</p>
 
-                    <p>Our <a href="https://charlestonstrippers101.com">male strippers Charleston</a> hunks and sexy males are one of a kind. </p>
+                    <p>Our <a href="https://charlestonstrippers101.com">male strippers Charleston</a> hunks and <a href="https://michmagic.vip">sexy males Charleston</a> are one of a kind. </p>
 
                 </div>
             </div>
